--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Database</string>
+    <string name="tab_label1">Dagbog</string>
+    <string name="tab_label2">Oversigt</string>
 </resources>
